--- a/drawTree/widget.ui
+++ b/drawTree/widget.ui
@@ -72,10 +72,16 @@
          <item>
           <widget class="QGroupBox" name="groupBox">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>50</height>
+            </size>
            </property>
            <property name="title">
             <string>Choose flip</string>
@@ -86,8 +92,8 @@
            <widget class="QCheckBox" name="checkBox">
             <property name="geometry">
              <rect>
-              <x>20</x>
-              <y>40</y>
+              <x>10</x>
+              <y>20</y>
               <width>181</width>
               <height>41</height>
              </rect>
